fix alignment and padding

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .nav-footer-grid {
-  @apply grid grid-flow-col grid-cols-3 grid-rows-1 gap-4 h-full py-10 mx-10;
+  @apply grid grid-flow-col grid-cols-3 grid-rows-1 gap-4 h-full py-10 mx-5;
 }
 
 .common-container {
